# Witness-AI

./: .env.example  .gitignore  LICENSE  README.md  config.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
cassettes/: clean_run.json  drift.json  hallucination.json  policy_violation.json
scenarios/: clean_run.py  common.py  drift.py  hallucination.py  policy_violation.py
scripts/: run_demo.py  smoke_gemini.py
tests/: test_drift.py  test_grounding.py  test_policy.py  test_report.py  test_runtime.py  test_trace.py
witness/: __init__.py
witness/agents/: base.py  data_lookup.py  report_generator.py  summarizer.py  ticket_filer.py
witness/audit/: report.py
witness/core/: llm.py  runtime.py  tools.py  trace.py
witness/dashboard/: app.py
witness/governance/: drift.py  grounding.py  policy.py  rules.py
witness/mocks/: database.py  outbox.py  ticketing.py
