[project]
name = "witness"
version = "0.1.0"
description = "Runtime governance and observability layer for multi-agent AI systems, centered on grounding verification."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.3",
    "python-dotenv>=1.0.1",
    "streamlit>=1.41.0",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[tool.setuptools]
packages = ["witness"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
